Added proper seeds, tweaked some front end

--- a/app/views/genre/index.html.erb
+++ b/app/views/genre/index.html.erb
@@ -1,4 +1,4 @@
 <h1 class="text-center">Genres</h1>
-<a class="btn btn-lg btn-primary" href='/genres/1/<%=rand(1..1)%>'>Literary</a>
-<a class="btn btn-lg btn-success" href='/genres/2/<%=rand(1..1)%>'>Speculative</a>
-<a class="btn btn-lg btn-danger" href='/genres/3/<%=rand(1..1)%>'>Romance</a>
+<a class="btn btn-lg btn-primary" href='/genres/1'>Literary</a>
+<a class="btn btn-lg btn-success" href='/genres/2'>Speculative</a>
+<a class="btn btn-lg btn-danger" href='/genres/3'>Romance</a>
