--- a/app/views/story/show.html.erb
+++ b/app/views/story/show.html.erb
@@ -1,4 +1,4 @@
-<a href="/genres/<%=@genre.id%>/<%=@story.id%>">Back to <%=@genre.genre%></a>
+<a href="/genres/<%=@genre.id%>">Back to <%=@genre.genre%></a>
 <h1 class="text-center"><%=@story.title%></h1>
 <p class="story"><%=@story.content%></p>
 <h2 class="text-center"><%=@story.author%></h2>
