--- a/app/views/story/show.html.erb
+++ b/app/views/story/show.html.erb
@@ -2,3 +2,4 @@
 <h1 class="text-center"><%=@story.title%></h1>
 <p class="story"><%=@story.content%></p>
 <h2 class="text-center"><%=@story.author%></h2>
+<a href="/genres/<%=@genre.id%>">Back to <%=@genre.genre%></a>
