--- a/app/assets/stylesheets/genres.scss
+++ b/app/assets/stylesheets/genres.scss
@@ -1,7 +1,7 @@
 p {
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
   margin-bottom: 15px;
-  font-size: 21px;
+  font-size: 1em;
   font-weight: 200;
 }
 img{
