--- a/app/views/genre/index.html.erb
+++ b/app/views/genre/index.html.erb
@@ -3,7 +3,8 @@
     <h1>Welcome To Short-Fics</h1>
     <p>Short-Fics lets you read short stories</p>
   </div>
-  <img src="http://www.thisiscolossal.com/wp-content/uploads/2013/10/dulk-3.jpg" alt="Story">
+  <div class="img-container">
+  </div>
   <div class="jumbotron">
     <p>Genres</p>
     <a class="btn btn-primary" href='/genres/1'>Literary</a>
