--- a/app/assets/stylesheets/genres.scss
+++ b/app/assets/stylesheets/genres.scss
@@ -49,3 +49,15 @@ footer{
     margin-bottom: 2px;
   }
 }
+
+@media screen and (max-width: 774px){
+  .nav li{
+    margin-top: 0px;
+  }
+}
+.nav li{
+  margin-top: 10px;
+}
+.navbar-nav{
+  margin-top: -5px;
+}
