--- a/app/views/story/new.html.erb
+++ b/app/views/story/new.html.erb
@@ -24,5 +24,5 @@
     <label for="content">Content</label>
     <textarea class="form-control" name="content" ></textarea>
   </div>
-  <input class="btn btn-primary" type="submit" value="Sumbit">
+  <input class="btn btn-primary" type="submit" value="Submit">
 </form>
