Moved analytics and added more styling

--- a/app/assets/stylesheets/genres.scss
+++ b/app/assets/stylesheets/genres.scss
@@ -5,6 +5,10 @@ p {
   font-weight: 200;
 }
 
+.big-header {
+  margin-top: 0px
+}
+
 .well{
   margin-bottom: 0px;
   text-align: center;
@@ -33,12 +37,81 @@ footer{
   min-height: calc(100vh - 152px);
 }
 
+
 .inline{
   display: inline-block;
 }
 .form-control{
   width: 75%;
 }
+
+.jumbotron {
+  background-color: #FFFFFF;
+  border: 0px;
+}
+.well {
+  background-color: #FFFFFF;
+  padding-top: 0px
+}
+
+.footer {
+  background-color: #FFFFFF;
+}
+
+#no-border {
+  border: 0px solid #FFFFFF;
+  box-shadow: 0px 0px 0px #FFFFFF;
+}
+
+.black-button {
+  background-color: #262248
+}
+.navy-button {
+  background-color: #262262
+}
+.orange-button {
+  background-color: #DFAB72
+}
+
+.btn {
+  color: white;
+}
+
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+color: #000;  /*Sets the text hover color on navbar*/
+}
+
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active >
+ a:hover, .navbar-default .navbar-nav > .active > a:focus {
+color: white; /*BACKGROUND color for active*/
+background-color:#FFFFFF;
+}
+
+  .navbar-default {
+    background-color: #FFFFFF;
+    border-color: #FFFFFF;
+}
+
+  .dropdown-menu > li > a:hover,
+   .dropdown-menu > li > a:focus {
+    color: #262626;
+   text-decoration: none;
+  background-color: #66CCFF;  /*change color of links in drop down here*/
+   }
+
+ .nav > li > a:hover,
+ .nav > li > a:focus {
+    text-decoration: none;
+    background-color: #000000; /*Change rollover cell color here*/
+  }
+
+
+
+
+  .navbar-default .navbar-nav > li > a {
+   color: #262248; /*Change active text color here*/
+    }
+
 
 @media screen and (max-width: 462px){
   .btn{
