--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,5 +1,4 @@
-<nav class="navbar navbar-default">
-  <h4 id="logo" class="navbar-brand">Short-Fics</h4>
+<nav class="navbar navbar-default" class="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -12,12 +11,14 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse navigation" id="bs-example-navbar-collapse-1">
+
+
       <ul class="nav navbar-nav navbar-right">
         <% if session[:id] %>
           <li><%= link_to 'Logout', logout_path %></li>
         <% end %>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div>
+  </div>
 </nav>
