--- a/app/views/story/show.html.erb
+++ b/app/views/story/show.html.erb
@@ -1,5 +1,5 @@
 <a href="/genres/<%=@genre.id%>">Back to <%=@genre.genre%></a>
-<h1 class="text-center"><%=@story.title%></h1>
+<h1 class="text-center big-header"><%=@story.title%></h1>
 <p class="story"><%=@story.content%></p>
 <h2 class="text-center"><%=@story.author%></h2>
 <a href="/genres/<%=@genre.id%>">Back to <%=@genre.genre%></a>
