--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -4,12 +4,12 @@
   <%end%>
 <%end%>
 <div class="login">
-  <h1 class="text-center">Welcome to ShortFix</h1>
+  <h1 class="text-center">Welcome to ShortFics</h1>
   <form action="/users" method="post">
     <input type="hidden" name="authenticity_token" value="<%=form_authenticity_token%>">
     <div class="form-group">
-      <input class="form-control inline" type="text" name="name" placeholder="Enter Your Name">
-      <input type="submit" class="btn btn-primary inline" value="Submit">
+      <input class="form-control" type="text" name="name" placeholder="Enter Your Name">
+      <input type="submit" class="btn navy-button inline" value="Submit">
     </div>
   </form>
 </div>
