--- a/app/views/genre/index.html.erb
+++ b/app/views/genre/index.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="well" id="no-border">
-    <h1 class="big-header">Welcome To ShortFics</h1>
+    <h1 class="big-header blackfat">Welcome To ShortFics</h1>
     <p>ShortFics lets you read short stories</p>
-    <a class="text-center" href="/info">Learn More...</a>
+    <p><a class="text-center" href="/info">Learn More...</a></p>
   </div>
   <img src="/edited_logo_2.jpg" alt="logo" class="img-responsive">
   <div class="jumbotron">
-    <p>Genres</p>
+    <p class="blackfat">Genres</p>
     <a class="btn black-button" href='/genres/1'>Literary</a>
     <a class="btn orange-button" href='/genres/2'>Speculative</a>
     <a class="btn navy-button" href='/genres/3'>Romance</a>
