--- a/app/views/genre/info.html.erb
+++ b/app/views/genre/info.html.erb
@@ -1,5 +1,5 @@
-<a href="/genres">Back</a>
-<h2 class="text-center big-header">Welcome to a new world of reading</h2>
+<p><a href="/genres">Back</a></p>
+<h2 class="text-center big-header blackfat">Welcome to a new world of reading</h2>
 <p class="text-center">Start by choosing your genre</p>
 <p class="text-center">Then read the story sample</p>
 <p class="text-center">"Like it"? Click to keep reading</p>
