--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -4,7 +4,7 @@
   <%end%>
 <%end%>
 <div class="login">
-  <h1 class="text-center">Welcome to ShortFics</h1>
+  <h1 class="text-center blackfat">Welcome to ShortFics</h1>
   <form action="/users" method="post">
     <input type="hidden" name="authenticity_token" value="<%=form_authenticity_token%>">
     <div class="form-group">
