--- a/app/views/genre/snippet.html.erb
+++ b/app/views/genre/snippet.html.erb
@@ -41,7 +41,7 @@ setCarouselHeight('#carousel-example');
         <div class="item <%if story == @stories.first%>active<%end%>">
           <div class="carousel-content">
             <div>
-              <h3><%=story.title%></h3>
+              <h3 class="text-center"><%=story.title%></h3>
               <p><%=truncate story.snippet, length: 400 %></p>
               <h4 class="text-center">Like what you read so far?</h4>
               <div class="row">
