--- a/app/views/genre/info.html.erb
+++ b/app/views/genre/info.html.erb
@@ -1,8 +1,7 @@
-<p><a href="/genres">Back</a></p>
 <h2 class="text-center big-header blackfat">Welcome to a new world of reading</h2>
 <p class="text-center">Start by choosing your genre</p>
 <p class="text-center">Then read the story sample</p>
-<p class="text-center">"Like it"? Click to keep reading</p>
-<p class="text-center">"Not feeling it"? Click to get a new one</p>
+<p class="text-center">Like it? Click to keep reading</p>
+<p class="text-center">Not feeling it? Click to get a new one</p>
 <p class="text-center">We want you to land on a story you'll love</p>
 <p class="text-center">Enjoy</p>
