--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,23 +1,41 @@
 <nav class="navbar navbar-default" class="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+    <div class="navbar-header navigation">
+      <button type="button" id="nav-button" class="navbar-toggle collapsed pull-left" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <img src="/Menu_button.jpg" class="img-responsive navbar-brand" alt="Menu">
       </button>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse navigation" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse navigation row" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-left">
 
+
+      <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img src="/Menu_button.jpg" class="img-responsive navbar-brand hidden-xs" alt="Menu"><p class="visible-xs-inline hover-underline">Go To</p></a>
+          <ul class="dropdown-menu">
+            <li><a href="/genres">Home</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="/genres/1">Literary</a></li>
+            <li><a href="/genres/2">Speculative</a></li>
+            <li><a href="/genres/3">Romance</a></li>
+          </ul>
+        </li>
+      </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <% if session[:id] %>
-          <li><%= link_to 'Logout', logout_path %></li>
-        <% end %>
+      <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img src="/setting_button.jpg" class="img-responsive navbar-brand hidden-xs" alt="Settings"><p class="visible-xs-inline hover-underline">Options</p></a>
+          <ul class="dropdown-menu">
+            <li><a href="/genres">Settings</a></li>
+            <%if session[:id]%>
+              <li><a href="/logout">Logout</a></li>
+            <%else%>
+              <li><a href="/">Logout</a></li>
+            <%end%>
+          </ul>
+        </li>
       </ul>
     </div>
   </div>
