--- a/app/views/genre/index.html.erb
+++ b/app/views/genre/index.html.erb
@@ -4,7 +4,7 @@
     <p>ShortFics lets you read short stories</p>
     <p><a class="text-center" href="/info">Learn More...</a></p>
   </div>
-  <img src="/edited_logo_2.jpg" alt="logo" class="img-responsive">
+  <img src="/edited_logo_2.jpg" alt="logo" class="img-responsive" id="big-logo">
   <div class="jumbotron">
     <p class="blackfat">Genres</p>
     <a class="btn black-button" href='/genres/1'>Literary</a>
