--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -23,6 +23,9 @@
           </ul>
         </li>
       </ul>
+      <div class="image-div">
+       <a href="/genres"><img id="home-img" class="brand-logo hidden-xs"  src="/logo.jpg" class="img-responsive navbar-brand" alt="Logo"></a>
+      </div>
 
       <ul class="nav navbar-nav navbar-right">
       <li class="dropdown">
