--- a/app/views/story/show.html.erb
+++ b/app/views/story/show.html.erb
@@ -2,7 +2,7 @@
 <p class="story"><%=@story.content%></p>
 <h3 class="text-center author">-<%=@story.author%></h3>
 <div class="row">
-    <a class="btn black-button col-xs-4 col-xs-offset-1" href="/genres/">Genres</a>
+    <a class="btn black-button col-xs-4 col-xs-offset-1" href="/genres/">Home</a>
 
     <a class="btn navy-button col-xs-4 col-xs-offset-2" href="/genres/<%=@genre.id%>"><%=@genre.genre%></a>
 </div>
