--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Short-Fics</title>
+    <title>ShortFics</title>
     <meta name="viewport" content="width=device-width">
     <%= csrf_meta_tags %>
     <%= favicon_link_tag 'favicon.ico' %>
