--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -31,7 +31,7 @@
       <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img src="/setting_button.jpg" class="img-responsive navbar-brand hidden-xs" alt="Settings"><p class="visible-xs-inline hover-underline">Options</p></a>
           <ul class="dropdown-menu">
-            <li><a href="/genres">Settings</a></li>
+            <li><a href="/settings">Settings</a></li>
             <%if session[:id]%>
               <li><a href="/logout">Logout</a></li>
             <%else%>
